--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,3 +19,9 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }} # token name
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }} # token secret (password)
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: oraxen
+          path: jars
