--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Publish with Gradle
-        run: ./gradlew core:build
+        run: ./gradlew v1_21_R1:build
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: success()
